2016-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, TODO:
    The ".direct" directive - inside of the parameter string -
    recognize and execute the #v() macro.

  * gputils/dump.c:
    bugfix

  * gpasm/cod.c, gplink/cod.c:
    More or more accurate warning messages.

  * gpasm/gpmsg.c, libgputils/gpsystem.c, libgputils/gpsystem.h:
    Minor optimization.

  * gplink/gplink.c, gplink/parse.y, gplink/script.c, gplink/script.h:
    Renamed some functions:
	script_add_macro --> script_add_symbol_value
	script_get_macro --> script_get_symbol_value

  * gplink/scan.l:
    The names of static functions got '_' prefix.

  * gpasm/coff.c, gpasm/coff.h, gpasm/util.c, gplink/map.c:
    Code formatting.

2016-08-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Minor optimization.

  * gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/util.c:
    Renamed some functions:

  * gpasm/gpasm.h.in, gpasm/lst.c, gpasm/util.c:
    Added the macro parameters to the list.

  * gpasm/symbol_list.c, libgputils/gpcod.h:
    Some short comment.

  * gpasm/evaluate.c, gpasm/scan.l:
    Code formatting.

2016-08-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.*, gpasm/coff.c, gpasm/coff.h, gpasm/directive.c,
    gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/symbol_list.c,
    gpasm/symbol_list.h, gpasm/util.c, gplink/gplink.c,
    libgputils/gpcofflink.c, libgputils/gpcofflink.h,
    libgputils/gplist.c, libgputils/gplist.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    Fixed an old bug.

  * gpasm/directive.c, gpasm/evaluate.c, gpasm/lst.c, gputils/gpvo.c,
    libgputils/gpcoff.h, libgputils/gpcoffgen.c,
    libgputils/gpcofflink.c, libgputils/gpcofflink.h,
    libgputils/gpcoffopt.c, libgputils/gpreadobj.c,
    libgputils/gpwriteobj.c:
    Renamed some constants:
	e.g. from "RELOCT_..." to "RELOC_..."
	e.g. from "AUX_SCN" to "AUX_SECTION"
